--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">AssignmentNewsApp</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+  <string name="Status_Loading">loading...</string>
+  <string name="Status_Error">Error!</string>
+  <string name="retry">Retry</string>
 </resources>
